--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "generator static site bundle with webpack multiple pages",
   "main": "index.js",
   "scripts": {
-    "start": "webpack-dev-server --config webpack.dev.js --mode development",
+    "start": "webpack serve --config webpack.dev.js --mode development",
     "build": "webpack --config webpack.prod.js --mode production",
     "preview": "npm run build && http-server dist",
     "test": "echo \"Error: no test specified\" && exit 1"
@@ -15,6 +15,9 @@
   "author": "Dimas Prasetyo & Arie Aditya Nugraha",
   "license": "ISC",
   "devDependencies": {
+    "@babel/core": "^7.14.8",
+    "@babel/preset-env": "^7.14.9",
+    "babel-loader": "^8.2.2",
     "clean-webpack-plugin": "^4.0.0-alpha.0",
     "css-loader": "^6.2.0",
     "html-webpack-plugin": "^5.3.2",
@@ -23,11 +26,12 @@
     "optimize-css-assets-webpack-plugin": "^6.0.1",
     "style-loader": "^3.2.1",
     "terser-webpack-plugin": "^5.1.4",
-    "webpack": "^5.47.1",
     "webpack-cli": "^4.7.2",
     "webpack-dev-server": "^3.11.2"
   },
   "dependencies": {
-    "normalize.css": "^8.0.1"
+    "css-minimizer-webpack-plugin": "^3.0.2",
+    "normalize.css": "^8.0.1",
+    "webpack": "^5.47.1"
   }
 }
